--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,11 +10,11 @@ title = "Academic"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = ""
+baseurl = "https://Copland-yz.github.io/starter-academic"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = ""
+copyright = "&copy; 2021 Copland-yz All Rights Reserved"
 
 ############################
 ## Advanced options below ##
